@@ -33,7 +33,7 @@ dependencies {
     }
     implementation 'org.apache.logging.log4j:log4j-core:2.24.3'
     implementation 'com.oracle.database.jdbc:ojdbc11:23.7.0.25.01'
-    implementation 'org.springframework:spring-jdbc:6.2.5'
+    implementation 'org.springframework:spring-jdbc:6.2.6'
 
     /*
     implementation 'org.incenp:sssom-core:0.7.9'
